Thu Jul  7 22:08:40 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          First pass at making the sample dissection generic. Still using
          hard-wired initialization, but getting closer to a point where
          initialization can be done dynamically.

Thu Jul  7 17:44:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/common.xsl:

          New template substring-before-last

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/mpb.xsl:

          Include models of externaly-referenced topics in our
          inherited projects list.

Wed Jul  6 16:17:37 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.cpp:
        * tools/dissector/packet-datawriter.cpp:
        * tools/dissector/packet-opendds.h:
        * tools/dissector/packet-opendds.cpp:
        * tools/dissector/packet-repo.cpp:
        * tools/dissector/sample_base.h:
        * tools/dissector/sample_base.cpp:

          Adding prototype sample dissectors for working out development
          issues. These are explicitly bound to specific data, captured
          from the DCPS/MultiTopic test. Also cleaned up some now
          redundant debug output.

Wed Jul  6 15:47:21 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * java/build_scripts/jms_scoreboard.pl:

          Same as the previous commit: adapting for alternate Ant installation.

Wed Jul  6 14:01:43 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/tests/setup.pl:

          Merged a change that was initially developed in the sbir_transport
          branch: allows location of Ant when it's installed from a Linux
          package instead of the standard Ant directory layout.

Tue Jul  5 22:58:08 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/dissector.mpc: